Update chat API