@@ -10,22 +10,24 @@ import com.example.whatsapp.Repository.GroupMemberRepository;
 import com.example.whatsapp.Repository.MessageRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import java.time.*;
-import java.util.*;
+
+import java.time.LocalDateTime;
+import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ChatService {
+
     private final ChatRepository chatRepository;
     private final MessageRepository messageRepository;
     private final GroupMemberRepository groupMemberRepository;
 
+    // ✅ Sidebar chat list (lightweight)
     public List<ChatDTO> getAllChatsForUser(Long userId) {
-        List<Chat> chats = chatRepository.findAllByCreatedBy(userId);
+        List<Chat> chats = chatRepository.findAllChatsInvolvingUser(userId);
 
         return chats.stream().map(chat -> {
-            // Find last message
             Message lastMsg = messageRepository
                     .findTopByChatIdOrderBySentAtDesc(chat.getId())
                     .orElse(null);
@@ -37,12 +39,11 @@ public class ChatService {
                     .lastMessage(lastMsg != null ? lastMsg.getContent() : null)
                     .lastMessageTime(lastMsg != null ? lastMsg.getSentAt() : null)
                     .build();
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
-    //Add mew group chat
+    //Create a new group
     public ChatDTO createGroupChat(CreateGroupRequestDTO req) {
-        //Create group chat
         Chat chat = Chat.builder()
                 .title(req.getGroupName())
                 .type("GROUP")
@@ -52,7 +53,6 @@ public class ChatService {
 
         Chat savedChat = chatRepository.save(chat);
 
-        //Add all members
         List<GroupMember> members = req.getMemberIds().stream()
                 .map(userId -> GroupMember.builder()
                         .chatId(savedChat.getId())
@@ -63,11 +63,30 @@ public class ChatService {
 
         groupMemberRepository.saveAll(members);
 
-        //Return minimal DTO
         return ChatDTO.builder()
                 .id(savedChat.getId())
                 .title(savedChat.getTitle())
                 .type(savedChat.getType())
                 .build();
     }
+
+    //create chat private
+    public ChatDTO createIndividualChat(ChatDTO chatRequest) {
+        Chat chat = Chat.builder()
+                .title(chatRequest.getTitle())
+                .type("PRIVATE")
+                .createdBy(chatRequest.getCreatedBy())
+                .createdAt(LocalDateTime.now())
+                .build();
+
+        Chat saved = chatRepository.save(chat);
+
+        return ChatDTO.builder()
+                .id(saved.getId())
+                .title(saved.getTitle())
+                .type(saved.getType())
+                .createdBy(saved.getCreatedBy())
+                .build();
+    }
+
 }
